# gerbil

./: AUTHORS  CMakeLists.txt  Makefile  README.md  README.txt  auxiliary.cpp  auxiliary.h  commandrunner.h  configure.sh  controller.h  dockcontroller.h  gerbil.pro  gerbil.qrc  gerbil_gui_debug.cpp  io.cpp  main.cpp  mainwindow.ui  mfams.cpp  mfams.h  multi_img.cpp  multi_img.h  multi_img_viewer.cpp  multi_img_viewer.h  multi_img_viewer.ui  process-table.pl  process-timings.pl  reorganization  rgbluv.cpp  stopwatchgpu.h  viewerwindow.cpp  viewerwindow.h  viewerwindow.ui  viewport.cpp  viewport.h
CMakeModules/: VoleUnitGerbil.cmake
cmake/: EnableSSE2.cmake  FindNumPy.cmake  FindOpenCL.cmake  FindTBB.cmake  TargetDoc.cmake  VoleFindExternalModules.cmake  VoleFindPackages.cmake  VoleModuleMacros.cmake  VoleProcessOptionalDependencies.cmake  VolePythonExtension.cmake  cl2cpp.cmake
common/: BuildSettings.txt  CMakeLists.txt  illuminant.h  multi_img_ext.cpp  multi_img_io_ext.cpp
controller/: controller.cpp  controller.h  controller_docks.cpp
core/: CMakeLists.txt  gerbil_config.h  gerbil_cplusplus.h  gerbil_ostream_ops.cpp  gerbil_ostream_ops.h  hashes.cpp  hashes.h  labeling.cpp  labeling.h  multi_img.h  progress_observer.h  qtopencv.cpp  qtopencv.h  rectangles.cpp  rectangles.h  shared_data.h  stopwatch.h  vole_config.cpp  vole_config.h
core/background_task/: background_task.cpp  background_task.h  background_task_queue.cpp  background_task_queue.h
core/background_task/tasks/: scopeimage.h
core/background_task/tasks/cuda/: clampcuda.cpp  clampcuda.h  datarangecuda.cpp  datarangecuda.h  gerbil_cuda_util.h  gradientcuda.cpp  gradientcuda.h  illuminantcuda.cpp  illuminantcuda.h  normrangecuda.cpp  normrangecuda.h
core/background_task/tasks/tbb/: band2qimagetbb.cpp  band2qimagetbb.h  bgrtbb.cpp  bgrtbb.h  clamptbb.cpp  clamptbb.h  datarangetbb.cpp  datarangetbb.h  gradienttbb.cpp  gradienttbb.h  illuminanttbb.cpp  illuminanttbb.h  norml2tbb.cpp  norml2tbb.h  normrangetbb.cpp  normrangetbb.h  pcatbb.cpp  pcatbb.h  rescaletbb.cpp  rescaletbb.h  rgbqttbb.cpp  rgbqttbb.h  specsimtbb.cpp  specsimtbb.h
core/cmake/: TargetDoc.cmake  VoleFindExternalModules.cmake  VoleFindPackages.cmake  VoleModuleMacros.cmake  VoleProcessOptionalDependencies.cmake  doxy.config.in
core/common/: CMakeLists.txt  labeling.cpp  labeling.h  multi_img.cpp  multi_img.h  multi_img_io.cpp  pyvole_common.cpp  qtopencv.cpp  qtopencv.h  vole_config.cpp  vole_statistics.h  vole_user_paths.h
core/gui/: BuildSettings.txt  blending_image.cpp  blending_image.h  command_wrapper.cpp  command_wrapper.h  draw_operation.h  executionthread.cpp  executionthread.h  generated_gui_commands_template.txt  generated_gui_include_list_template.txt  gui_command_thread.h  image_plane.cpp  image_plane.h  main.cpp  mouse_move_operation.h  mouse_over_area.cpp  mouse_over_area.h  mouse_over_image_generator.h  rectangle.cpp  rectangle.h  ui_vole_gui.h  vole_gui.cpp  vole_gui.h  vole_gui.ui
core/gui/commands/: cmf.cpp  cmf.h  ld.cpp  ld.h  resampling_detection_gui.cpp  resampling_detection_gui.h
core/meta/: BuildSettings.txt  create_new_command.cpp  create_new_command.h  create_new_command_config.cpp  create_new_command_config.h
core/multi_img/: cieobserver.h  illuminant.h  multi_img.cpp  multi_img.h  multi_img_ext.cpp  multi_img_io.cpp  multi_img_io_ext.cpp  multi_img_offloaded.cpp  multi_img_offloaded.h  multi_img_tbb.cpp  multi_img_tbb.h
core/shell/: CMakeLists.txt  command.h  main.cxx
core/storage/: vole_cache_config.h
csparse/: CMakeLists.txt  cs_counts.c  cs_etree.c  cs_ipvec.c  cs_lusol.c  cs_post.c  cs_tdfs.c  cs_util.c
dist_view/: compute.cpp  compute.h  distviewbinstbb.cpp  distviewbinstbb.h  distviewcontroller.cpp  distviewcontroller.h  distviewgui.h  distviewmodel.cpp  foldingbar.cpp  foldingbar.ui  viewport.cpp  viewport.h  viewport_drawing.cpp  viewportcontrol.ui
doc/: Makefile  Shortcuts.txt  datadep.dot
docks/: banddock.h  banddock.ui  clusteringdock.ui  falsecolordock.cpp  falsecolordock.h  falsecolordock_sel.ui  graphsegwidget.h  illumdock.cpp  labeldock.ui  labelingdock.ui  normdock.cpp  normdock.h  normdock.ui  roidock.cpp  roidock.h  roidock.ui  roidock_buttons.ui  ussegmentationdock.cpp
edge_detect/: CMakeLists.txt  edge_detection.cpp  edge_detection.h  edge_detection_config.cpp  edge_detection_config.h  graphsom.cpp  graphsom.h  myCanny.cpp  myCanny.h  neuron.cpp  neuron.h  plot.sh  run.sh  self_organizing_map.cpp  self_organizing_map.h  som.cpp  som.h  som2d.cpp  som2d.h  som3d.cpp  som3d.h  som_cone.cpp  som_distance.h  som_tester.cpp  som_tester.h  som_trainer.cpp  som_trainer.h  somexaminer.cpp  somexaminer.h  somtester.cpp  somtester.h  space_filling_curve.cpp  space_filling_curve.h  talkingwatch.h
gui/: BuildSettings.txt  CMakeLists.txt  autohidewidget.cpp  bandview.cpp  bandview.h  commandrunner.cpp  commandrunner.h  controller.cpp  foldingbar.ui  gerbil.qrc  gerbil_gui_debug.cpp  gerbil_gui_debug.h  gerbilapplication.cpp  gerbilapplication.h  iogui.cpp  iogui.h  main.cpp  mainwindow.cpp  mainwindow.h  multi_img_viewer.cpp  multi_img_viewer.h  multi_img_viewer.ui  roiview.cpp  roiview.h  scaledview.cpp  scaledview.h  view3d.cpp  view3d.h  viewerwindow.cpp  viewerwindow.h  viewerwindow.ui  viewport.cpp  viewport.h
imginput/: CMakeLists.txt  export.cpp  export.h  gdalreader.cpp  gdalreader.h  imginput.cpp  imginput.h  imginput_config.cpp  imginput_config.h
logo/: logo.xcf
lsh/: CMakeLists.txt  lsh.cpp  lsh.h  lshreader.cpp  lshreader.h
manipulation/: manipulation_shell.cpp  manipulation_shell.h
mapper/: CMakeLists.txt  mapper.cpp  mapper.h  (+2 more)
rbc/: CMakeLists.txt  RBC.cpp  RBC.h  RBC_config.cpp  RBC_config.h  brute.cpp  brute.h  defs.h  driver.cpp  kernelWrap.cpp  kernelWrap.h  kernels.cpp  kernels.h  meanshift.cpp  meanshift.h  rbc.cpp  rbc.h  rbc_include.h  rbc_ops.cpp  rbc_ops.h  sKernel.cpp  sKernel.h  sKernelWrap.cpp  sKernelWrap.h  supportRoutines.cpp  supportRoutines.h  todo.txt  utils.cpp  utils.h  utilsGPU.cpp  utilsGPU.h  versions.txt
rbc/opencl/kernels/: rbc.cl
(+794 files in other folders)
